--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.7.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.10",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
